--- a/src/SFA.DAS.ProviderRelationships.Api.UnitTests/SFA.DAS.ProviderRelationships.Api.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api.UnitTests/SFA.DAS.ProviderRelationships.Api.UnitTests.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNet.WebApi" Version="5.2.6" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.10.1" />
     <PackageReference Include="Moq" Version="4.10.1" />
     <PackageReference Include="NUnit" Version="3.11.0" />
     <PackageReference Include="SFA.DAS.Testing" Version="2.0.5" />
