--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers.UnitTests/SFA.DAS.ProviderRelationships.MessageHandlers.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers.UnitTests/SFA.DAS.ProviderRelationships.MessageHandlers.UnitTests.csproj
@@ -1,33 +1,28 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
-    <PropertyGroup>
-        <LangVersion>latest</LangVersion>
-        <TargetFramework>net462</TargetFramework>
-        <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-    </PropertyGroup>
-    
-    <ItemGroup>
-        <PackageReference Include="AutoFixture" Version="4.6.0" />
-        <PackageReference Include="AutoFixture.NUnit3" Version="4.6.0" />
-        <PackageReference Include="AutoMapper " Version="7.0.1" />
-        <PackageReference Include="CloneExtensions" Version="1.4.2" />
-        <PackageReference Include="MediatR" Version="6.0.0" />
-        <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-        <PackageReference Include="Moq" Version="4.10.1" />
-        <PackageReference Include="NServiceBus.Testing" Version="7.0.0" />
-        <PackageReference Include="NUnit" Version="3.11.0" />
-        <PackageReference Include="NUnit3TestAdapter" Version="3.12.0" />
-        <PackageReference Include="SFA.DAS.CosmosDb" Version="1.0.47" />
-        <PackageReference Include="SFA.DAS.CosmosDb.Testing" Version="1.0.47" />
-        <PackageReference Include="SFA.DAS.Testing" Version="2.0.5" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <ProjectReference Include="..\SFA.DAS.ProviderRelationships.MessageHandlers\SFA.DAS.ProviderRelationships.MessageHandlers.csproj" />
-    </ItemGroup>
-
-    <ItemGroup>
-        <Reference Include="System" />
-    </ItemGroup>
-
+  <PropertyGroup>
+    <LangVersion>latest</LangVersion>
+    <TargetFramework>net6.0</TargetFramework>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="AutoFixture.NUnit3" Version="4.6.0" />
+    <PackageReference Include="AutoMapper " Version="12.0.1" />
+    <PackageReference Include="CloneExtensions" Version="1.4.2" />
+    <PackageReference Include="MediatR" Version="11.1.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
+    <PackageReference Include="NServiceBus.Testing" Version="7.0.0" />
+    <PackageReference Include="NUnit" Version="3.11.0" />
+    <PackageReference Include="SFA.DAS.CosmosDb.Testing" Version="1.0.47" />
+    <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
+    <PackageReference Include="SFA.DAS.Testing" Version="2.0.5" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.4.0" />
+    <PackageReference Include="NLog.Extensions.Logging" Version="1.7.5" />
+    <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="16.0.20" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\SFA.DAS.ProviderRelationships.MessageHandlers\SFA.DAS.ProviderRelationships.MessageHandlers.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System" />
+  </ItemGroup>
 </Project>
