--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers/SFA.DAS.ProviderRelationships.MessageHandlers.csproj
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers/SFA.DAS.ProviderRelationships.MessageHandlers.csproj
@@ -1,47 +1,38 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk;Microsoft.NET.Sdk.Publish">
-
     <PropertyGroup>
         <LangVersion>latest</LangVersion>
-        <TargetFramework>net462</TargetFramework>
+        <TargetFramework>net6.0</TargetFramework>
         <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
-
         <IsGenerateRunCommandFileDisabled>true</IsGenerateRunCommandFileDisabled>
         <IsWebJobProject>true</IsWebJobProject>
         <OutputType>Exe</OutputType>
         <WebJobName>ProviderRelationships-MessageHandlers</WebJobName>
         <WebJobType>Continuous</WebJobType>
     </PropertyGroup>
-
     <ItemGroup>
-        <PackageReference Include="Microsoft.Azure.WebJobs" Version="2.2.0" />
-        <PackageReference Include="Microsoft.Azure.WebJobs.Extensions" Version="2.2.0" />
-        <PackageReference Include="Microsoft.Azure.WebJobs.Logging.ApplicationInsights" Version="2.2.0" />
-        <PackageReference Include="Microsoft.VisualStudio.SlowCheetah" Version="3.1.66" />
-        <PackageReference Include="NLog.Extensions.Logging" Version="1.3.0" />
+        <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="16.0.20" />
+        <PackageReference Include="NLog.Extensions.Logging" Version="1.7.5" />
         <PackageReference Include="NLog.Schema" Version="4.5.10" />
-        <PackageReference Include="SFA.DAS.CosmosDb" Version="1.0.47" />
         <PackageReference Include="SFA.DAS.CosmosDb.Testing" Version="1.0.47" />
-        <PackageReference Include="SFA.DAS.EmployerAccounts.Messages" Version="1.3.2040" />
         <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.1.5" />
         <PackageReference Include="SFA.DAS.NLog.Targets.Redis" Version="1.1.5" />
-        <PackageReference Include="SFA.DAS.NServiceBus" Version="15.0.25" />
-        <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="15.0.25" />
+        <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="16.0.20" />
         <PackageReference Include="SFA.DAS.UnitOfWork.EntityFrameworkCore" Version="9.0.13" />
         <PackageReference Include="SFA.DAS.UnitOfWork.NServiceBus" Version="9.0.13" />
         <PackageReference Include="StructureMap" Version="4.7.1" />
-        <PackageReference Include="WindowsAzure.Storage" Version="9.3.2" />
+        <PackageReference Include="WindowsAzure.Storage" Version="9.3.3" />
+        <PackageReference Include="System.Configuration.ConfigurationManager" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Azure.WebJobs.Extensions" Version="3.0.6" />
+        <PackageReference Include="Microsoft.Azure.WebJobs.Logging.ApplicationInsights" Version="3.0.34" />
+        <PackageReference Include="SFA.DAS.EmployerAccounts.Messages" Version="1.6.3195" />
     </ItemGroup>
-
     <ItemGroup>
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Messages\SFA.DAS.ProviderRelationships.Messages.csproj" />
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships\SFA.DAS.ProviderRelationships.csproj" />
     </ItemGroup>
-
     <ItemGroup>
         <Reference Include="System" />
-        <Reference Include="System.Configuration" />
     </ItemGroup>
-
     <ItemGroup>
         <None Include="App.config">
             <TransformOnBuild>true</TransformOnBuild>
@@ -51,5 +42,7 @@
             <IsTransformFile>True</IsTransformFile>
         </None>
     </ItemGroup>
-
+    <ItemGroup>
+        <Content Include="appsettings.json" />
+    </ItemGroup>
 </Project>
