--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers/SFA.DAS.ProviderRelationships.MessageHandlers.csproj
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers/SFA.DAS.ProviderRelationships.MessageHandlers.csproj
@@ -40,15 +40,25 @@
         <Reference Include="System" />
     </ItemGroup>
     <ItemGroup>
-        <None Include="App.config">
-            <TransformOnBuild>true</TransformOnBuild>
-        </None>
         <None Include="App.*.config">
             <DependentUpon>App.config</DependentUpon>
             <IsTransformFile>True</IsTransformFile>
         </None>
     </ItemGroup>
     <ItemGroup>
-        <Content Include="appsettings.json" />
+      <None Remove="C:\Users\ADM_HarrisJo\.nuget\packages\nlog.schema\5.1.2\contentFiles\any\any\NLog.xsd" />
+    </ItemGroup>
+    <ItemGroup>
+        <Content Include="appsettings.json">
+          <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+        </Content>
+    </ItemGroup>
+    <ItemGroup>
+      <None Update="nlog.config">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="nlog.Development.config">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 </Project>
