--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers/appsettings.json
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers/appsettings.json
@@ -1,7 +1,8 @@
 {
-  "APPINSIGHTS_INSTRUMENTATIONKEY": "",
-  "ConnectionStrings": {
-    "AzureWebJobsDashboard": "UseDevelopmentStorage=true",
-    "AzureWebJobsStorage": "UseDevelopmentStorage=true"
-  }
+    "APPINSIGHTS_INSTRUMENTATIONKEY": "",
+    "EnvironmentName": "LOCAL",
+    "ConnectionStrings": {
+        "AzureWebJobsDashboard": "UseDevelopmentStorage=true",
+        "AzureWebJobsStorage": "UseDevelopmentStorage=true"
+    }
 }
