--- a/src/SFA.DAS.ProviderRelationships.Web/appsettings.Development.json
+++ b/src/SFA.DAS.ProviderRelationships.Web/appsettings.Development.json
@@ -1,9 +1,10 @@
 ﻿{
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft": "Warning",
-      "Microsoft.Hosting.Lifetime": "Information"
-    }
-  }
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft": "Warning",
+            "Microsoft.Hosting.Lifetime": "Information"
+        }
+    },
+    "StubAuth": false
 }
