--- a/src/SFA.DAS.ProviderRelationships.Api.Client.TestHarness/SFA.DAS.ProviderRelationships.Api.Client.TestHarness.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api.Client.TestHarness/SFA.DAS.ProviderRelationships.Api.Client.TestHarness.csproj
@@ -8,8 +8,9 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="6.0.1" />
-        <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+        <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Hosting" Version="7.0.1" />
+        <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
     </ItemGroup>
 
     <ItemGroup>
