--- a/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Web/SFA.DAS.ProviderRelationships.Web.csproj
@@ -36,6 +36,7 @@
         <PackageReference Include="SFA.DAS.HashingService" Version="1.0.183" />
         <PackageReference Include="SFA.DAS.GovUK.Auth" Version="0.2.203" />
         <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="16.0.21" />
+        <PackageReference Include="SFA.DAS.Provider.Shared.UI" Version="2.0.26" />
         <PackageReference Include="SFA.DAS.UnitOfWork.EntityFrameworkCore" Version="9.0.28" />
         <PackageReference Include="SFA.DAS.UnitOfWork.Mvc" Version="9.0.28" />
         <PackageReference Include="SFA.DAS.UnitOfWork.NServiceBus" Version="9.0.28" />
