--- a/pipeline-templates/job/code-build.yml
+++ b/pipeline-templates/job/code-build.yml
@@ -3,37 +3,58 @@ parameters:
   BuildConfiguration:
 
 jobs:
-  - job: CodeBuild
-    variables:
-      - group: BUILD Management Resources
-    steps:
-    - template: azure-pipelines-templates/build/step/gitversion.yml@das-platform-building-blocks
+- job: CodeBuild
+  pool:
+    name: DAS - Continuous Integration Agents
+    workspace:
+      clean: all
+  variables:
+  - group: BUILD Management Resources
+  steps:
+  - template: azure-pipelines-templates/build/step/gitversion.yml@das-platform-building-blocks
 
-    - template: azure-pipelines-templates/build/step/app-build.yml@das-platform-building-blocks
-      parameters:
-        SonarCloudProjectKey: SkillsFundingAgency_das-provider-relationships
-        RunAcceptanceTests: false
-  
-    - task: DotNetCoreCLI@2
-      displayName: Publish - dotnet publish ${{ parameters.SolutionBaseName }}
+  - template: azure-pipelines-templates/build/step/app-build.yml@das-platform-building-blocks
+
+  - task: DotNetCoreCLI@2
+      displayName: Publish - dotnet publish ${{ parameters.SolutionBaseName }}.Web
       inputs:
         command: publish
         publishWebProjects: false #set to false as this setting (which defaults to true) will parse the entire repo for web projects
-        projects: src/${{ parameters.SolutionBaseName }}/${{ parameters.SolutionBaseName }}.csproj
+        projects: src/${{ parameters.SolutionBaseName }}.Web/${{ parameters.SolutionBaseName }}.Web.csproj
         arguments: -o $(build.artifactstagingdirectory)/publish -c ${{ parameters.BuildConfiguration }} --no-build
         modifyOutputPath: true
         zipAfterPublish: true
-  
-    - task: CopyFiles@2
-      displayName: Copy Files to $(build.artifactstagingdirectory)/publish
+
+  - task: DotNetCoreCLI@2
+      displayName: Publish - dotnet publish ${{ parameters.SolutionBaseName }}.Api
       inputs:
-        Contents: |
-          azure/**
-          src/**/bin/**/*.dacpac
-        TargetFolder: $(build.artifactstagingdirectory)/publish
-  
-    - task: PublishPipelineArtifact@1
-      displayName: Publish Build Artifact
+        command: publish
+        publishWebProjects: false #set to false as this setting (which defaults to true) will parse the entire repo for web projects
+        projects: src/${{ parameters.SolutionBaseName }}.Api/${{ parameters.SolutionBaseName }}.Api.csproj
+        arguments: -o $(build.artifactstagingdirectory)/publish -c ${{ parameters.BuildConfiguration }} --no-build
+        modifyOutputPath: true
+        zipAfterPublish: true
+
+  - task: DotNetCoreCLI@2
+      displayName: Publish - dotnet publish ${{ parameters.SolutionBaseName }}.Host
       inputs:
-        targetPath: $(build.artifactstagingdirectory)/publish
-        artifactName: ${{ parameters.SolutionBaseName }}
+        command: publish
+        publishWebProjects: false #set to false as this setting (which defaults to true) will parse the entire repo for web projects
+        projects: src/${{ parameters.SolutionBaseName }}.Host/${{ parameters.SolutionBaseName }}.Host.csproj
+        arguments: -o $(build.artifactstagingdirectory)/publish -c ${{ parameters.BuildConfiguration }} --no-build
+        modifyOutputPath: true
+        zipAfterPublish: true
+
+  - task: CopyFiles@2
+    displayName: Copy Files to $(build.artifactstagingdirectory)/publish
+    inputs:
+      Contents: |
+        azure/**
+      TargetFolder: $(build.artifactstagingdirectory)/publish
+      OverWrite: true
+
+  - task: PublishPipelineArtifact@1
+    displayName: Publish Build Artifact
+    inputs:
+      targetPath: $(build.artifactstagingdirectory)/publish
+      artifactName: ${{ parameters.SolutionBaseName }}
