--- a/src/SFA.DAS.ProviderRelationships.Jobs/SFA.DAS.ProviderRelationships.Jobs.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Jobs/SFA.DAS.ProviderRelationships.Jobs.csproj
@@ -8,15 +8,16 @@
         <WebJobType>Continuous</WebJobType>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.Azure.WebJobs.Host.Storage" Version="4.1.0" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.0" />
+        <PackageReference Include="Microsoft.Azure.WebJobs.Host.Storage" Version="5.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
+        <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
         
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="NLog.Schema" Version="5.1.2" />
         <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.2.1" />
         <PackageReference Include="SFA.DAS.NLog.Targets.Redis" Version="1.2.1" />
-        <PackageReference Include="SFA.DAS.NServiceBus" Version="16.0.21" />
-        <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="16.0.21" />
+        <PackageReference Include="SFA.DAS.NServiceBus" Version="17.0.49" />
+        <PackageReference Include="SFA.DAS.NServiceBus.SqlServer" Version="17.0.49" />
         <PackageReference Include="SFA.DAS.UnitOfWork.EntityFrameworkCore" Version="9.0.28" />
         <PackageReference Include="SFA.DAS.UnitOfWork.NServiceBus" Version="9.0.28" />
         <PackageReference Include="Microsoft.Azure.WebJobs.Extensions" Version="5.0.0" />
@@ -29,7 +30,7 @@
         <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
         
         <PackageReference Include="NLog" Version="5.1.1" />
-        <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
 
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.30.1" />
         <PackageReference Include="NLog.Extensions.Logging" Version="5.2.1" />
