--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers/SFA.DAS.ProviderRelationships.MessageHandlers.csproj
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers/SFA.DAS.ProviderRelationships.MessageHandlers.csproj
@@ -26,6 +26,7 @@
         
         <PackageReference Include="Microsoft.Azure.WebJobs.Extensions" Version="5.0.0" />
         <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
         
         <PackageReference Include="NLog.Extensions.Logging" Version="5.2.1" />
         <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.2.1" />
