--- a/src/SFA.DAS.ProviderRelationships.Jobs/SFA.DAS.ProviderRelationships.Jobs.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Jobs/SFA.DAS.ProviderRelationships.Jobs.csproj
@@ -11,6 +11,8 @@
         <PackageReference Include="Microsoft.Azure.WebJobs.Host.Storage" Version="5.0.0" />
         <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
         <PackageReference Include="Microsoft.Extensions.Options" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
         
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
         <PackageReference Include="NLog.Schema" Version="5.1.5" />
@@ -22,19 +24,13 @@
         <PackageReference Include="SFA.DAS.UnitOfWork.NServiceBus" Version="9.0.28" />
         <PackageReference Include="Microsoft.Azure.WebJobs.Extensions" Version="5.0.0" />
         <PackageReference Include="Microsoft.Azure.WebJobs.Logging.ApplicationInsights" Version="3.0.35" />
-        
         <PackageReference Include="morelinq" Version="3.4.2" />
-        <PackageReference Include="Microsoft.Azure.WebJobs.Extensions" Version="5.0.0" />
-        <PackageReference Include="Microsoft.Azure.WebJobs.Logging.ApplicationInsights" Version="3.0.35" />
         <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
         
         <PackageReference Include="NLog" Version="5.1.1" />
 
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.30.1" />
         <PackageReference Include="NLog.Extensions.Logging" Version="5.2.1" />
-        
-        <PackageReference Include="SFA.DAS.NLog.Logger" Version="1.2.1" />
-        <PackageReference Include="SFA.DAS.NLog.Targets.Redis" Version="1.2.1" />
     </ItemGroup>
     <ItemGroup>
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships\SFA.DAS.ProviderRelationships.csproj" />
