--- a/src/SFA.DAS.ProviderRelationships.MessageHandlers.TestHarness/SFA.DAS.ProviderRelationships.MessageHandlers.TestHarness.csproj
+++ b/src/SFA.DAS.ProviderRelationships.MessageHandlers.TestHarness/SFA.DAS.ProviderRelationships.MessageHandlers.TestHarness.csproj
@@ -1,27 +1,24 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
-
     <PropertyGroup>
         <LangVersion>latest</LangVersion>
         <OutputType>Exe</OutputType>
         <TargetFramework>net6.0</TargetFramework>
+        <TreatWarningsAsErrors>false</TreatWarningsAsErrors>
     </PropertyGroup>
-
-
     <ItemGroup>
-        <PackageReference Include="NLog" Version="5.1.1" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
-        <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.30.1" />
-        <PackageReference Include="SFA.DAS.Authentication" Version="1.1.2" />
-        <PackageReference Include="SFA.DAS.UnitOfWork.EntityFramework" Version="9.0.28" />
-        <PackageReference Include="SFA.DAS.UnitOfWork.NServiceBus" Version="9.0.28" />
         <PackageReference Include="SFA.DAS.EmployerAccounts.Messages" Version="1.6.3195" />
-        <PackageReference Include="Microsoft.Extensions.Configuration" Version="7.0.0" />
-        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="7.0.4" />
+        <PackageReference Include="Microsoft.Extensions.Configuration" Version="6.0.0" />
+        <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="6.0.0" />
     </ItemGroup>
-
     <ItemGroup>
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships.Messages\SFA.DAS.ProviderRelationships.Messages.csproj" />
         <ProjectReference Include="..\SFA.DAS.ProviderRelationships\SFA.DAS.ProviderRelationships.csproj" />
     </ItemGroup>
-
+    <ItemGroup>
+        <Content Include="appsettings.json" />
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="Properties\" />
+    </ItemGroup>
 </Project>
