--- a/pipeline-templates/job/deploy.yml
+++ b/pipeline-templates/job/deploy.yml
@@ -81,6 +81,7 @@ jobs:
               ReadStoreAuthKey: $(ReadStoreAuthKey)
               ProviderRelationshipsApimSubscriptionKey: $(ProviderRelationshipsApimSubscriptionKey)
               ServiceBusConnectionString: $(ServiceBusConnectionString)
+              ProviderAccountsApiClientSecret: $(ProviderAccountsApiClientSecret)
         - template: azure-pipelines-templates/deploy/step/app-role-assignments.yml@das-platform-building-blocks
           parameters:
             ServiceConnection: ${{ parameters.AppRoleAssignmentsServiceConnection }}
