--- a/src/SFA.DAS.ProviderRelationships.Api.UnitTests/SFA.DAS.ProviderRelationships.Api.UnitTests.csproj
+++ b/src/SFA.DAS.ProviderRelationships.Api.UnitTests/SFA.DAS.ProviderRelationships.Api.UnitTests.csproj
@@ -13,6 +13,7 @@
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="6.11.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.6.0" />
+    <PackageReference Include="SFA.DAS.Testing.AutoFixture" Version="3.0.169" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.30.1" />
     <PackageReference Include="Moq" Version="4.18.4" />
